Fix #1957741 [[Enhancement] Padding larger for Transform HTML tab content](https://bugs.launchpad.net/calibre/+bug/1957741)

--- a/src/calibre/gui2/convert/look_and_feel.ui
+++ b/src/calibre/gui2/convert/look_and_feel.ui
@@ -508,6 +508,18 @@
        <string>Transform &amp;HTML</string>
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout_2">
+       <property name="leftMargin">
+        <number>0</number>
+       </property>
+       <property name="topMargin">
+        <number>0</number>
+       </property>
+       <property name="rightMargin">
+        <number>0</number>
+       </property>
+       <property name="bottomMargin">
+        <number>0</number>
+       </property>
        <item>
         <widget class="HtmlRulesWidget" name="opt_transform_html_rules" native="true"/>
        </item>
