--- a/src/calibre/gui2/preferences/look_feel.ui
+++ b/src/calibre/gui2/preferences/look_feel.ui
@@ -994,6 +994,19 @@ A value of zero means calculate automatically.</string>
          </layout>
         </widget>
        </item>
+       <item row="8" column="0">
+        <widget class="QCheckBox" name="opt_edit_metadata_ignore_display_order">
+         <property name="text">
+          <string>Show all columns in default order when editing metadata</string>
+         </property>
+         <property name="toolTip">
+          <string>&lt;p&gt;Check this box to make the edit metadata dialogs ignore the
+above specifications, showing all the columns in the default order. This is
+useful for temporarily seeing all your columns in the dialogs without losing
+the display and order specifications.&lt;/p&gt;</string>
+         </property>
+        </widget>
+       </item>
       </layout>
      </widget>
      <widget class="QWidget" name="tag_browser_tab">
