--- a/src/calibre/gui2/preferences/look_feel.ui
+++ b/src/calibre/gui2/preferences/look_feel.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1083</width>
-    <height>580</height>
+    <height>579</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -987,33 +987,33 @@ A value of zero means calculate automatically.</string>
           <layout class="QFormLayout">
            <item row="0" column="0" colspan="2">
             <widget class="QCheckBox" name="opt_edit_metadata_ignore_display_order">
-             <property name="text">
-              <string>Show all columns in default order when editing metadata</string>
-             </property>
              <property name="toolTip">
               <string>&lt;p&gt;Check this box to make the edit metadata dialogs ignore the
 above specifications, showing all the columns in the default order. This is
 useful for temporarily seeing all your columns in the dialogs without losing
 the display and order specifications.&lt;/p&gt;</string>
              </property>
+             <property name="text">
+              <string>Show &amp;all columns in default order when editing metadata</string>
+             </property>
             </widget>
            </item>
            <item row="1" column="0" colspan="2">
             <widget class="QCheckBox" name="opt_edit_metadata_elide_labels">
-             <property name="text">
-              <string>Elide labels when editing custom columns</string>
-             </property>
              <property name="toolTip">
               <string>If checked then labels wider than the label width
 will be elided, otherwise they will be word wrapped.</string>
+             </property>
+             <property name="text">
+              <string>&amp;Elide labels when editing custom columns</string>
              </property>
             </widget>
            </item>
            <item row="2" column="0">
             <widget class="QLabel" name="label_102">
              <property name="text">
-              <string>Elision point</string>
-               </property>
+              <string>Elision point:</string>
+             </property>
              <property name="buddy">
               <cstring>opt_edit_metadata_elision_point</cstring>
              </property>
@@ -1033,14 +1033,14 @@ will be elided, otherwise they will be word wrapped.</string>
            <item row="0" column="0" colspan="2">
             <widget class="QCheckBox" name="opt_edit_metadata_single_use_2_cols_for_custom_fields">
              <property name="text">
-              <string>Use two columns for custom columns in the Default layout</string>
+              <string>Use &amp;two columns for custom columns in the Default layout</string>
              </property>
             </widget>
            </item>
            <item row="1" column="0">
             <widget class="QLabel" name="label_102">
              <property name="text">
-              <string>Bulk edit custom column label length</string>
+              <string>&amp;Bulk edit custom column label length:</string>
              </property>
              <property name="buddy">
               <cstring>opt_edit_metadata_bulk_cc_label_length</cstring>
@@ -1050,16 +1050,17 @@ will be elided, otherwise they will be word wrapped.</string>
            <item row="1" column="1">
             <widget class="QSpinBox" name="opt_edit_metadata_bulk_cc_label_length">
              <property name="toolTip">
-              <string>The maximum width of a custom column label in bulk metadata
-edit. It is computed by multiplying the average width of characters
-in the font by this number.</string>
+              <string>The maximum width of a custom column label for the bulk metadata edit dialog in average characters.</string>
+             </property>
+             <property name="suffix">
+              <string> chars</string>
              </property>
             </widget>
            </item>
            <item row="2" column="0">
             <widget class="QLabel" name="label_1022">
              <property name="text">
-              <string>Single edit Custom column label length</string>
+              <string>&amp;Single edit custom column label length:</string>
              </property>
              <property name="buddy">
               <cstring>opt_edit_metadata_single_cc_label_length</cstring>
@@ -1069,11 +1070,12 @@ in the font by this number.</string>
            <item row="2" column="1">
             <widget class="QSpinBox" name="opt_edit_metadata_single_cc_label_length">
              <property name="toolTip">
-              <string>The maximum width of a custom column label in single
-metadata edit. It is computed by multiplying the average width of characters
-in the font by this number.</string>
+              <string>The maximum width of a custom column label for the single metadata edit dialog in average characters.</string>
              </property>
-           </widget>
+             <property name="suffix">
+              <string> chars</string>
+             </property>
+            </widget>
            </item>
           </layout>
          </item>
