--- a/src/calibre/gui2/dialogs/tag_editor.ui
+++ b/src/calibre/gui2/dialogs/tag_editor.ui
@@ -94,7 +94,7 @@
       </widget>
      </item>
      <item row="2" column="1">
-      <widget class="QListWidget" name="available_tags">
+      <widget class="QListView" name="available_tags">
        <property name="alternatingRowColors">
         <bool>true</bool>
        </property>
@@ -220,7 +220,7 @@
       </widget>
      </item>
      <item row="2" column="3">
-      <widget class="QListWidget" name="applied_tags">
+      <widget class="QListView" name="applied_tags">
        <property name="alternatingRowColors">
         <bool>true</bool>
        </property>
