Enhancement 1961639: Option to disable editing composite templates if edited with the Tab key

--- a/src/calibre/gui2/preferences/look_feel.ui
+++ b/src/calibre/gui2/preferences/look_feel.ui
@@ -1060,19 +1060,42 @@ will be elided, otherwise they will be word wrapped.</string>
             </widget>
            </item>
            <item row="2" column="0">
-            <widget class="QLabel" name="label_102">
+            <widget class="QLabel" name="label_1023">
              <property name="text">
-              <string>Elision point:</string>
-             </property>
-             <property name="buddy">
-              <cstring>opt_edit_metadata_elision_point</cstring>
+              <string>          </string>
              </property>
             </widget>
            </item>
            <item row="2" column="1">
-            <widget class="QComboBox" name="opt_edit_metadata_elision_point">
+            <layout class="QHBoxLayout">
+             <item>
+              <widget class="QLabel" name="label_102">
+               <property name="text">
+                <string>Elision point:</string>
+               </property>
+               <property name="buddy">
+                <cstring>opt_edit_metadata_elision_point</cstring>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QComboBox" name="opt_edit_metadata_elision_point">
+               <property name="toolTip">
+                <string>Choose where in the label to put the...</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </item>
+           <item row="3" column="0" colspan="2">
+            <widget class="QCheckBox" name="opt_edit_metadata_templates_only_F2_on_booklist">
+             <property name="text">
+              <string>&amp;Tab key doesn't edit column templates on the book list</string>
+             </property>
              <property name="toolTip">
-              <string>Choose where in the label to put the...</string>
+              <string>&lt;p&gt;Check this box to disable editing the template for
+a "Column made from other columns" on the book list when the column is entered
+using the Tab key. The F2 (Edit) key will still open the template editor.&lt;/p&gt;</string>
              </property>
             </widget>
            </item>
