--- a/src/calibre/gui2/preferences/search.ui
+++ b/src/calibre/gui2/preferences/search.ui
@@ -135,8 +135,12 @@
        </item>
        <item row="4" column="0">
         <widget class="QCheckBox" name="opt_use_primary_find_in_search">
+         <property name="toolTip">
+          <string>Searching will ignore accents on characters as well as punctuation. So for example:
+Penas will match Peña’s</string>
+         </property>
          <property name="text">
-          <string>Unaccented characters match &amp;accented characters</string>
+          <string>Unaccented characters match &amp;accented characters and punctuation is ignored</string>
          </property>
         </widget>
        </item>
@@ -165,7 +169,7 @@
               </property>
              </widget>
             </item>
-            <item  row="0" column="1">
+            <item row="0" column="1">
              <widget class="QComboBox" name="gst_names">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -212,7 +216,7 @@ a search term by changing the value box then pressing Save.</string>
               </property>
              </widget>
             </item>
-            <item  row="1" column="1">
+            <item row="1" column="1">
              <widget class="EditWithComplete" name="gst_value">
               <property name="toolTip">
                <string>Enter a comma-separated list of lookup names of the columns
