--- a/manual/templates/layout.html
+++ b/manual/templates/layout.html
@@ -9,7 +9,7 @@
   var host = window.location.hostname;
   var element = document.createElement('script');
   var firstScript = document.getElementsByTagName('script')[0];
-  var url = 'https://quantcast.mgr.consensu.org'
+  var url = 'https://cmp.quantcast.com'
     .concat('/choice/', '593Yp13RM2k2D', '/', host, '/choice.js');
   var uspTries = 0;
   var uspTriesLimit = 3;
@@ -71,6 +71,9 @@
           args[2](retr);
         }
       } else {
+        if(args[0] === 'init' && typeof args[3] === 'object') {
+          args[3] = { ...args[3], tag_version: 'V2' };
+        }
         queue.push(args);
       }
     }
@@ -104,7 +107,9 @@
             if (msgIsString) {
               returnMsg = JSON.stringify(returnMsg);
             }
-            event.source.postMessage(returnMsg, '*');
+            if (event && event.source && event.source.postMessage) {
+              event.source.postMessage(returnMsg, '*');
+            }
           },
           payload.parameter
         );
