--- a/manual/templates/layout.html
+++ b/manual/templates/layout.html
@@ -11,15 +11,15 @@
 
   gtag('config', 'G-YMW4X5CSKP');
 </script>
-<!-- Quantcast Choice. Consent Manager Tag v2.0 (for TCF 2.0) -->
 <!-- See https://www.quantcast.com/protect/sites username is email -->
+<!-- Quantcast Choice. Consent Manager Tag v2.0 (for TCF 2.0) -->
 <script type="text/javascript" async=true>
 (function() {
   var host = window.location.hostname;
   var element = document.createElement('script');
   var firstScript = document.getElementsByTagName('script')[0];
   var url = 'https://cmp.quantcast.com'
-    .concat('/choice/', '593Yp13RM2k2D', '/', host, '/choice.js');
+    .concat('/choice/', '593Yp13RM2k2D', '/', host, '/choice.js?tag_version=V2');
   var uspTries = 0;
   var uspTriesLimit = 3;
   element.async = true;
@@ -81,7 +81,7 @@
         }
       } else {
         if(args[0] === 'init' && typeof args[3] === 'object') {
-          args[3] = { ...args[3], tag_version: 'V2' };
+          args[3] = Object.assign(args[3], { tag_version: 'V2' });
         }
         queue.push(args);
       }
