--- a/src/calibre/gui2/dialogs/template_dialog.ui
+++ b/src/calibre/gui2/dialogs/template_dialog.ui
@@ -76,7 +76,7 @@
         <widget class="QWidget" name="icon_layout">
          <layout class="QGridLayout">
           <item row="0" column="0" colspan="2">
-           <layout class="QHBoxLayout">
+           <layout class="QHBoxLayout" name="icon_kind_layout">
             <item>
              <widget class="QLabel" name="icon_kind_label">
               <property name="text">
@@ -110,15 +110,21 @@
              <string>Copy an icon file name to the clipboard:</string>
             </property>
             <property name="buddy">
-             <cstring>color_name</cstring>
+             <cstring>icon_files</cstring>
             </property>
            </widget>
           </item>
           <item row="2" column="1">
            <widget class="QWidget">
-            <layout class="QHBoxLayout">
+            <layout class="QHBoxLayout" name="icon_select_layout">
              <item>
               <widget class="QComboBox" name="icon_files">
+               <property name="toolTip">
+                <string>&lt;p&gt;The template must return the name of the icon file
+                to display. If you wish to display multiple icons, separate the
+                individual icon file names with a ':' (colon). They will all be
+                displayed on the column&lt;/p&gt;</string>
+               </property>
               </widget>
              </item>
              <item>
