Changes to improve robustness: 1) Ensure that the server displays columns added using the command line. 2) Make "official" the fact that get_categories returns an ordered dict.
While in the process, move the general methods category_display_order and is_standard_category from the gui to db.get_categories().

Finally, improve the tooltip for L&F / Tag browser / hierarchical items

--- a/src/calibre/gui2/preferences/look_feel.ui
+++ b/src/calibre/gui2/preferences/look_feel.ui
@@ -1192,7 +1192,7 @@ using the Tab key. The F2 (Edit) key will still open the template editor.&lt;/p&
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>20</width>
+            <width>50</width>
             <height>40</height>
            </size>
           </property>
@@ -1278,7 +1278,8 @@ hierarchical tree in the Tag browser. For example, if you check
 and 'Mystery.Thriller' will be displayed with English and Thriller
 both under 'Mystery'. If 'tags' is not checked
 then the tags will be displayed each on their own line.&lt;/p&gt;
-&lt;p&gt;Some categories such as authors cannot be hierarchical.&lt;/p&gt;</string>
+&lt;p&gt;The categories 'authors', 'publisher', 'news', 'formats', and 'rating'
+cannot be hierarchical.&lt;/p&gt;</string>
           </property>
          </widget>
         </item>
